fixed nav alignment bug for width<=500px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -95,6 +95,7 @@ li {
 	display: flex;
 	width: 100%;
 	height: 100%;
+	align-items: start;
 
 	@media screen and (width>=500px) and (height >=500px) {
 
@@ -373,7 +374,7 @@ li {
 		margin: 0;
 		padding: 0;
 		width: 100%;
-		height: 50.5px;
+		height: 100%;
 
 		@media only screen and (width>=500px) {
 			height: 50.25px;
@@ -1056,7 +1057,7 @@ button:hover {
 		&_user-name {
 			font-weight: 700;
 			color: black;
-			
+
 		}
 		&_checkmark-wrapper {
 			margin-left: 2px;
